# deoxy

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  config-example.toml  index.js  package.json
core/: Cargo.toml
core/src/: lib.rs  program.rs
examples/: motor.rs  pause.rs  protocol.rs  pulse-width.rs  pump.rs
lib/: pin.js  schedule.js
routes/: light-up.js  pwm.js  status.js  unloaded.js
src/: angle.rs  comm.rs  communication.rs  config.rs  flags.rs  io.rs  lib.rs  mail.rs  main.rs  motion.rs  motor.rs  pin.rs  program.rs  pump.rs  server.rs  twenty.rs
src/server/: job.rs  mod.rs  state.rs
tests/: pin.js  schedule.js
views/: light-up.pug
web/: Cargo.toml  index.html
web/src/: buffers.rs  lib.rs  main.rs  messages.rs
web/static/: index.html
web/static/css/: index.css
