[package]
name = "deoxy"
version = "0.1.1"
authors = ["Alex Hamilton <alex.hamilton@ou.edu>"]
description = "A programmable, user-friendly buffer exchange system."
license = "ISC"
edition = "2018"

[dependencies]
actix-web = "0.7.18"
deoxy-core = { version = "0.1.1", path = "core" }
gpio = "0.4.1"
lazy_static = "1.2.0"
log = "0.4.6"
uom = "0.21.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[features]
default = []
stub = []

[badges]
travis-ci = { repository = "aehmlo/deoxy", branch = "master" }
maintenance = { status = "actively-developed" }

[workspace]
