[package]
name = "deoxy"
version = "0.1.1"
authors = ["Alex Hamilton <alex.hamilton@ou.edu>"]
description = "A programmable, user-friendly buffer exchange system."
license = "ISC"
edition = "2018"

[dependencies]
actix-web = "0.7.18"
deoxy-core = { version = "0.1.1", path = "core" }
deoxy-web = { version = "0.1.1", path = "web", optional = true }
gpio = "0.4.1"
lazy_static = "1.2.0"
log = "0.4.6"
uom = "0.21.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde_derive = { version = "1.0.84", optional = true }
serde = { version = "1.0.84", optional = true }
futures = { version = "0.1.25", optional = true }

[features]
default = ["server"]
stub = []
use_serde = ["deoxy-core/use_serde", "serde_derive", "serde"]
server = ["use_serde", "futures"]
web = ["deoxy-web"]

[badges]
travis-ci = { repository = "aehmlo/deoxy", branch = "master" }
maintenance = { status = "actively-developed" }

[workspace]

[dev-dependencies]
pretty_env_logger = "0.3.0"
termion = "1.5.1"
