[package]
name = "deoxy-core"
version = "0.2.0"
authors = ["Alex Hamilton <alex.hamilton@ou.edu>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Core utilities for deoxy."

[dependencies]
serde = { version = "1.0.84", optional = true }
serde_derive = { version = "1.0.84", optional = true }

[features]
default = []
use_serde = ["serde", "serde_derive"]